--- a/elo.tex
+++ b/elo.tex
@@ -73,7 +73,7 @@ We {\it expected} the scores be binomially distributed: $A\sim\operatorname{Bin}
 
 Note that the expected scores could be greater than 10. Indeed, if a very good team played a very bad team, yet only won 10-9, while in some sense we could say that we ``expected'' 10-1, it makes more sense to say that we expected 19 goals to 1.
 
-The update will be proportional to $1 - \text{p-value}$, where $p-value$ is the probability of a equally or more significant result occuring. We're using the two-tailed version. This means that if someone does not beat someone by as much as they should, their ratings go down despite them having won. This also means that results that are exactly as expected produce no change in skills.
+The update will be proportional to $1 - \text{p-value}$, where $\text{p-value}$ is the probability of a equally or more significant result occuring. We're using the two-tailed version. This means that if someone does not beat someone by as much as they should, their ratings go down despite them having won. This also means that results that are exactly as expected produce no change in skills.
 \[
     \Delta = \frac{1}{2} - \sum_{m \in M} {a + b \choose m} E^m (1 - E)^{a + b - m}
     \text{,}
@@ -96,7 +96,7 @@ The score updates are
 where $k$ is some magic constant.
 
 
-Oh, and as a bit of fun, we can also "predict" scores:
+Oh, and as a bit of fun, we can also ``predict'' scores:
 
 If $E > \frac{1}{2}$ we predict a score of
 \[
